fix: fix integration tests

--- a/test/integration/ci-operator-prowgen/output/jobs/super/duper/super-duper-master-periodics.yaml
+++ b/test/integration/ci-operator-prowgen/output/jobs/super/duper/super-duper-master-periodics.yaml
@@ -25,6 +25,10 @@ periodics:
       env:
       - name: CLUSTER_TYPE
         value: aws
+      - name: HTTP_SERVER_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
       - name: JOB_NAME_SAFE
         value: e2e-aws-nightly
       - name: RPM_REPO_OPENSHIFT_ORIGIN
@@ -34,6 +38,9 @@ periodics:
       image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
       imagePullPolicy: Always
       name: ""
+      ports:
+      - containerPort: 8080
+        name: http
       resources:
         requests:
           cpu: 10m
@@ -93,6 +100,10 @@ periodics:
       env:
       - name: CLUSTER_TYPE
         value: aws
+      - name: HTTP_SERVER_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
       - name: JOB_NAME_SAFE
         value: e2e-aws-nightly-interval
       - name: RPM_REPO_OPENSHIFT_ORIGIN
@@ -102,6 +113,9 @@ periodics:
       image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
       imagePullPolicy: Always
       name: ""
+      ports:
+      - containerPort: 8080
+        name: http
       resources:
         requests:
           cpu: 10m
@@ -161,6 +175,10 @@ periodics:
       env:
       - name: CLUSTER_TYPE
         value: gcp
+      - name: HTTP_SERVER_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
       - name: JOB_NAME_SAFE
         value: e2e-nightly
       - name: RPM_REPO_OPENSHIFT_ORIGIN
@@ -170,6 +188,9 @@ periodics:
       image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
       imagePullPolicy: Always
       name: ""
+      ports:
+      - containerPort: 8080
+        name: http
       resources:
         requests:
           cpu: 10m
@@ -226,9 +247,17 @@ periodics:
       - --target=informer
       command:
       - ci-operator
+      env:
+      - name: HTTP_SERVER_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
       image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
       imagePullPolicy: Always
       name: ""
+      ports:
+      - containerPort: 8080
+        name: http
       resources:
         requests:
           cpu: 10m
