--- a/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_a_different_repo.yaml
+++ b/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_a_different_repo.yaml
@@ -45,9 +45,17 @@
         - --with-test-from=openshift/ci-tools@master:unit
         command:
         - ci-operator
+        env:
+        - name: HTTP_SERVER_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
         imagePullPolicy: Always
         name: ""
+        ports:
+        - containerPort: 8080
+          name: http
         resources:
           requests:
             cpu: 10m
