--- a/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_multiple_multi_pr_job_runs_with_diverse_additional_PRs.yaml
+++ b/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_multiple_multi_pr_job_runs_with_diverse_additional_PRs.yaml
@@ -32,9 +32,17 @@
         - --with-test-from=openshift/ci-tools@master:unit
         command:
         - ci-operator
+        env:
+        - name: HTTP_SERVER_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
         imagePullPolicy: Always
         name: ""
+        ports:
+        - containerPort: 8080
+          name: http
         resources:
           requests:
             cpu: 10m
@@ -126,9 +134,17 @@
         - --with-test-from=openshift/ci-tools@master:e2e
         command:
         - ci-operator
+        env:
+        - name: HTTP_SERVER_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
         imagePullPolicy: Always
         name: ""
+        ports:
+        - containerPort: 8080
+          name: http
         resources:
           requests:
             cpu: 10m
@@ -217,9 +233,17 @@
         - --with-test-from=openshift/ci-tools@master:unit
         command:
         - ci-operator
+        env:
+        - name: HTTP_SERVER_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
         image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
         imagePullPolicy: Always
         name: ""
+        ports:
+        - containerPort: 8080
+          name: http
         resources:
           requests:
             cpu: 10m
