--- a/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Pod_run_by_PodStep_fails_so_PodStep_terminates_and_returns_an_error.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Pod_run_by_PodStep_fails_so_PodStep_terminates_and_returns_an_error.yaml
@@ -52,6 +52,10 @@ spec:
       value: repo
     - name: REPO_OWNER
       value: org
+    - name: SRC_BASE
+      value: org/repo
+    - name: SRC_HOST
+      value: github.com
     - name: GIT_CONFIG_COUNT
       value: "1"
     - name: GIT_CONFIG_KEY_0
