--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods_enable_nested_podman.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods_enable_nested_podman.yaml
@@ -54,6 +54,10 @@
         value: repo
       - name: REPO_OWNER
         value: org
+      - name: SRC_BASE
+        value: org/repo
+      - name: SRC_HOST
+        value: github.com
       - name: GIT_CONFIG_COUNT
         value: "1"
       - name: GIT_CONFIG_KEY_0
