--- a/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Successful_pod_with_cloning.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestPodStepExecution_Successful_pod_with_cloning.yaml
@@ -52,6 +52,10 @@ spec:
       value: repo
     - name: REPO_OWNER
       value: org
+    - name: SRC_BASE
+      value: org/repo
+    - name: SRC_HOST
+      value: github.com
     - name: GIT_CONFIG_COUNT
       value: "1"
     - name: GIT_CONFIG_KEY_0
